--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,9 +9,13 @@
 </head>
 <body>
   <div class="signin-container">
-    <form class="signin-form" method="POST" action="{}">
+    <form class="signin-form" method="POST" action="{% url 'signin' %}">
       {% csrf_token %}
       <h2>Sign In</h2>
+      {% if error %}
+        <p style="color: red;">{{ error }}</p>
+      {% endif %}
+
 
       <div class="input-group">
         <label for="username">Username or Email</label>
