--- a/home/static/home/profile.css
+++ b/home/static/home/profile.css
@@ -215,6 +215,22 @@ body {
   font-size: 12px;
 }
 
+.message-list li strong {
+  font-size: 15px;
+  color: #0984e3;
+}
+
+.message-list li p {
+  font-size: 14px;
+  margin: 3px 0;
+}
+
+.message-list li small {
+  font-size: 12px;
+  color: #999;
+}
+
+
 /* ─────────────────────────────── */
 /* Community Section              */
 /* ─────────────────────────────── */
