--- a/home/static/home/searched_profile.css
+++ b/home/static/home/searched_profile.css
@@ -205,6 +205,7 @@ body {
 .post-media {
   width: 100%;
   max-height: 480px; /* increased from 360px */
+  background-color: black;
   object-fit: contain;
   border-radius: 12px;
 }
