--- a/home/templates/home/sign_up.html
+++ b/home/templates/home/sign_up.html
@@ -44,7 +44,10 @@
         <img id="image_preview" src="#" alt="Image Preview" />
       </div>
 
-      <button type="submit" class="btn-primary">Sign Up</button>
+      <div class="input-group">
+        <button type="submit" class="btn-primary">Sign Up</button>
+      </div>
+
 
       <p class="helper-text">Already have an account? <a href="{% url 'home' %}">Sign in</a></p>
     </form>
