--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -27,7 +27,10 @@
         <input type="password" id="password" name="password" required />
       </div>
 
-      <button type="submit" class="btn-primary">Sign In</button>
+      <div class="input-group">
+        <button type="submit" class="btn-primary">Sign In</button>
+      </div>
+
 
       <p class="helper-text">Don't have an account? <a href="{% url 'signup' %}">Sign up</a></p>
     </form>
