--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,7 +13,7 @@
       {% csrf_token %}
       <h2>Sign In</h2>
       {% if error %}
-        <p style="color: red;">{{ error }}</p>
+        <p class="error-message" style="color: red;">{{ error }}</p>
       {% endif %}
 
 
@@ -35,5 +35,7 @@
       <p class="helper-text">Don't have an account? <a href="{% url 'signup' %}">Sign up</a></p>
     </form>
   </div>
+
+  <script src="{% static 'home/js/signin.js' %}"></script>
 </body>
 </html>
